argocd/lubelogger/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lubelogger
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - lube.yanello.net
  rules:
    - backendRefs:
        - name: lubelogger
          port: 80
