argocd/lubelogger/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: lubelogger
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lubelogger
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "587"
              protocol: TCP
            - port: "465"
              protocol: TCP
